# esthetician-bot

./: .gitignore  .replit  README.md  constants.py  g_sheets.py  main.py  pyproject.toml  requirements.txt  test_main.py  utils.py
handlers/: analytics.py  calcular.py  commons.py  deletar.py  registrar.py
